MODON MRE BPDEV/force-app/main/default/objects/PaymentRemindersTemplates__mdt/PaymentRemindersTemplates__mdt.object-meta.xml
<CustomObject>
    <label>Payment Reminders Templates</label>
    <pluralLabel>Payment Reminders Templates</pluralLabel>
</CustomObject>