MODON MRE BPDEV/force-app/main/default/objects/PaymentRemindersTemplates__mdt/fields/EmailTemplateName__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateName__c</fullName>
    <label>Email Template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>