MODON MRE BPDEV/force-app/main/default/objects/PaymentRemindersTemplates__mdt/fields/FromAddress__c.field-meta.xml
<CustomField>
    <fullName>FromAddress__c</fullName>
    <label>From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>