MODON MRE BPDEV/force-app/main/default/objects/PaymentRemindersTemplates__mdt/fields/Is_Include_Joint_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Include_Joint_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Include Joint Owner</label>
    <type>Checkbox</type>
</CustomField>