MODON MRE BPDEV/force-app/main/default/objects/PaymentRemindersTemplates__mdt/fields/ProjectSetting__c.field-meta.xml
<CustomField>
    <fullName>ProjectSetting__c</fullName>
    <label>Project Setting</label>
    <referenceTo>ProjectSetting__mdt</referenceTo>
    <relationshipLabel>Payment Reminders Templates</relationshipLabel>
    <relationshipName>Payment_Reminders_Templates</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>