MODON MRE BPDEV/force-app/main/default/objects/PaymentRemindersTemplates__mdt/fields/ReminderType__c.field-meta.xml
<CustomField>
    <fullName>ReminderType__c</fullName>
    <label>Reminder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 Days Prior</fullName>
                <default>true</default>
                <label>15 Days Prior</label>
            </value>
            <value>
                <fullName>30 days Prior</fullName>
            </value>
            <value>
                <fullName>7 Days Prior</fullName>
            </value>
            <value>
                <fullName>More than 1 days Over Due</fullName>
            </value>
            <value>
                <fullName>More than 1 day to 6 days Prior</fullName>
            </value>
            <value>
                <fullName>More than 30 days Prior</fullName>
            </value>
            <value>
                <fullName>More than 8 day to 14 days Prior</fullName>
            </value>
            <value>
                <fullName>1 Day Prior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>